@@ -4,6 +4,7 @@ NEWS
 ====
 
 - 1.6.3 -
+  * Fix unix socket mode change to work without specifying user/group for socket
 
 - 1.6.2 - 2009-04-18
   * Add homepage to README
